--- a/index.html
+++ b/index.html
@@ -98,6 +98,14 @@
                         <input type="checkbox" name id>
                         <label for="grass">Planta</label>
                     </div>
+                    <div class="group-typ">
+                        <input type="checkbox" name id>
+                        <label for="fire">Fuego</label>
+                    </div>
+                    <div class="group-typ">
+                        <input type="checkbox" name id>
+                        <label for="water">Agua</label>
+                    </div>
 
                 </div>
             </div>
