--- a/html/pokedex.html
+++ b/html/pokedex.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pokedex</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/pokedex.css">
 </head>
 <body>
     <header>
@@ -35,8 +36,10 @@
 
     </div>
 
-    <div class="cards-container">
+    <div id="cards-container">
 
     </div>
+
+    <script src="../js/pokedex.js"></script>
 </body>
 </html>
