--- a/html/pokedex.html
+++ b/html/pokedex.html
@@ -17,7 +17,7 @@
             <nav class="nav-barra">
                 <ul >
                     <li>
-                        <a href="../html/pokedex.html">Pokedex</a>
+                        <a href="../html/index.html">Pokedex</a>
                     </li>
                     <li>
                         <a href="../html/region.html">Región</a>
