--- a/html/region.html
+++ b/html/region.html
@@ -27,32 +27,27 @@
             <ul>
                 <li class="list">
                     <a href="../html/pokedex.html">
-                        <span class="icon">
-                            <img src="../img/icon-pokeball.png">
-                        </span>
+                        <span class="iconify icon" data-icon="iconoir:pokeball"></span>
                         <span class="text">Pokedex</span>
                     </a>
                 </li>
+                
                 <li class="list">
                     <a href="../html/region.html">
-                        <span class="icon">
-                            <img src="../img/icon-world.png">
-                        </span>
+                        <span class="iconify icon" data-icon="gis:poi-map-o"></span>
                         <span class="text">Region</span>
                     </a>
                 </li>
                 <li class="list">
                     <a href="../html/build.html">
-                        <span class="icon">
-                            <img src="../img/icon-build.png">
-                        </span>
+                        <span class="iconify icon" data-icon="material-symbols:swords"></span>
                         <span class="text">Build</span>
                     </a>
                 </li>
             </ul>
         </nav>
 
-
+        <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
     </body>
 
 </html>
