--- a/html/index.html
+++ b/html/index.html
@@ -5,74 +5,136 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Principal</title>
+        <title>Pokemon</title>
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="stylesheet" href="../css/home.css">
     </head>
 
     <body>
-        <div class="container-header">
-            <header>
-                <div class="logo">
-                    <a href="../html/index.html" class="logo">
-                        <img src="../img/pokemon logo.png" alt="logo pokedex">
-                    </a>
-                </div>
 
-            </header>
+        <header>
+            <img class="logo" src="../img/pokemon logo.png" alt="logo pokemon">
+            <nav class="navigation">
+                <ul>
+                    <li class="list">
+                        <a href="../html/index.html">
+                            <span class="iconify icon"
+                                data-icon="iconoir:pokeball"></span>
+                            <span class="text">inicio</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="../html/pokedex.html">
+                            <span class="iconify icon"
+                                data-icon="iconoir:pokeball"></span>
+                            <span class="text">Pokedex</span>
+                        </a>
+                    </li>
 
-        </div>
+                    <li class="list">
+                        <a href="../html/region.html">
+                            <span class="iconify icon" data-icon="gis:poi-map-o"></span>
+                            <span class="text">Region</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="../html/build.html">
+                            <span class="iconify icon"
+                                data-icon="material-symbols:swords"></span>
+                            <span class="text">Build</span>
+                        </a>
+                    </li>
+                </ul>
 
-        <nav class="nav-barra">
-            <ul>
-                <li class="list">
-                    <a href="../html/pokedex.html">
-                        <span class="iconify icon" data-icon="iconoir:pokeball"></span>
-                        <span class="text">Pokedex</span>
-                    </a>
-                </li>
-                
-                <li class="list">
-                    <a href="../html/region.html">
-                        <span class="iconify icon" data-icon="gis:poi-map-o"></span>
-                        <span class="text">Region</span>
-                    </a>
-                </li>
-                <li class="list">
-                    <a href="../html/build.html">
-                        <span class="iconify icon" data-icon="material-symbols:swords"></span>
-                        <span class="text">Build</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-
-        <div class="seccion">
-
-            <div class="contenido">
-                <div class="introduccion">
-                    <div>
-                        <h2>¿Qué es Pokémon?</h2>
-                        <p>
-                            Pokémon, una abreviatura de "Pocket Monsters"
-                            (Monstruos de Bolsillo en español), es un fenómeno
-                            global que engloba videojuegos, series de
-                            televisión, películas, juegos de cartas
-                            coleccionables, juguetes y mucho más. En el corazón
-                            de Pokémon se encuentran los propios Pokémon:
-                            criaturas diversas y únicas con habilidades
-                            extraordinarias, que los entrenadores capturan y
-                            entrenan para convertirse en los mejores.
-                        </p>
-                    </div>
-                    <div><img class="chansey-ic" src="../img/chansey-icon.png"></div>
+            </nav>
+            <form>
+                <div class="form-group">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="icon-search">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M15.75 15.75l-2.489-2.489m0 0a3.375 3.375 0 10-4.773-4.773 3.375 3.375 0 004.774 4.774zM21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+                    <input type="search" placeholder="Buscar">
 
                 </div>
-                
+                <button class="btn-search">Buscar</button>
+            </form>
+        </header>
+        <section class="seccion">
+            <h1>Bienvenidos al Mundo de Pokémon</h1>
+            <p>En un mundo repleto de maravillas y misterios, existe un universo
+                habitado por criaturas extraordinarias conocidas como Pokémon.
+                Desde su debut en 1996, Pokémon ha capturado la imaginación de
+                millones de personas en todo el mundo, convirtiéndose en una de
+                las franquicias de entretenimiento más queridas y exitosas de
+                todos los tiempos</p>
+            <h1>Orígenes de Pokémon</h1>
+            <p>El fenómeno Pokémon fue creado por Satoshi Tajiri y Ken Sugimori
+                y nació de la pasión de Tajiri por la entomología, el estudio de
+                los insectos. Inspirado por la idea de atrapar insectos en la
+                infancia y la posibilidad de intercambiarlos con amigos a través
+                de un cable Game Boy, Tajiri ideó un concepto que se convertiría
+                en el núcleo de Pokémon: atrapar, entrenar y luchar con
+                criaturas.
+            </p>
+            <h1>El Mundo Pokémon</h1>
+            <p>El universo Pokémon es vasto y diverso. Los entrenadores viajan a
+                través de regiones fascinantes, cada una con su propio
+                ecosistema, cultura y Pokémon exclusivos. Desde la emblemática
+                región de Kanto hasta la exótica región de Alola, cada lugar
+                ofrece un mundo nuevo por explorar.</p>
+            <h1>Atrapar, Entrenar, Luchar</h1>
+            <p>El corazón de la experiencia Pokémon reside en la relación entre
+                los entrenadores y sus Pokémon. Los entrenadores buscan y
+                atrapan Pokémon en la naturaleza, los entrenan para desarrollar
+                sus habilidades y participan en emocionantes batallas contra
+                otros entrenadores. A lo largo de su viaje, los entrenadores
+                forjan lazos inquebrantables con sus compañeros Pokémon.
+            </p>
+            <h1>Evolución Pokémon</h1>
+            <p>
+                Una característica distintiva de los Pokémon es su capacidad
+                para evolucionar. Muchos Pokémon tienen formas evolucionadas que
+                adquieren a medida que ganan experiencia en combate. Estas
+                evoluciones pueden dar lugar a criaturas más fuertes y
+                sorprendentes.
 
-            </div>
+            </p>
+            <h1>El Desafío de la Liga Pokémon
+            </h1>
+            <p>
+                El objetivo final de muchos entrenadores es convertirse en
+                Campeón de la Liga Pokémon, un título prestigioso que solo los
+                más hábiles pueden alcanzar. Viajarán por gimnasios, derrotarán
+                a líderes de gimnasio y enfrentarán a la élite de la región en
+                su búsqueda para convertirse en el mejor entrenador.
+            </p>
+            <h1>La Comunidad Pokémon</h1>
+            <p>Además de los juegos, Pokémon ha inspirado una comunidad global
+                apasionada. Desde las cartas coleccionables hasta la serie de
+                televisión y las películas, Pokémon ha dejado una huella
+                indeleble en la cultura popular. Los fans de todas las edades se
+                unen para compartir su amor por estas criaturas mágicas</p>
+            <h1>El Futuro de Pokémon</h1>
+            <p>
+                A medida que avanzamos en el siglo XXI, Pokémon sigue
+                evolucionando y expandiéndose. Con nuevos juegos, películas y
+                proyectos emocionantes en desarrollo, el mundo de Pokémon nunca
+                ha sido más emocionante
+            </p>
+            <h1>Explora el Mundo Pokémon</h1>
+            <p>Bienvenidos a tu fuente definitiva para todo lo relacionado con
+                Pokémon. En esta página, te invitamos a explorar este mundo
+                fascinante a través de artículos informativos, guías, noticias y
+                más. Únete a nosotros mientras celebramos la magia de los
+                Pokémon y te ayudamos a convertirte en el mejor entrenador que
+                puedas ser.
+            </p>
+            <h1>¡Prepárate para embarcarte en una emocionante aventura en el
+                mundo de Pokémon!</h1>
+        </section>
 
-        </div>
         <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
     </body>
 
