--- a/html/region.html
+++ b/html/region.html
@@ -11,41 +11,40 @@
     </head>
 
     <body>
-        <div class="container-header">
-            <header>
-                <div class="logo">
-                    <a href="../html/index.html" class="logo">
-                        <img src="../img/pokemon logo.png" alt="logo pokedex">
-                    </a>
-                </div>
-
-            </header>
-
-        </div>
-
-        <nav class="nav-barra">
-            <ul>
-                <li class="list">
-                    <a href="../html/pokedex.html">
-                        <span class="iconify icon" data-icon="iconoir:pokeball"></span>
-                        <span class="text">Pokedex</span>
-                    </a>
-                </li>
+        <header>
+            <img class="logo" src="../img/pokemon logo.png" alt="logo pokemon">
+            <nav class="navigation">
+                <ul>
+                    <li class="list">
+                        <a href="../html/index.html">
+                            <span class="iconify icon" data-icon="iconoir:pokeball"></span>
+                            <span class="text">inicio</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="../html/pokedex.html">
+                            <span class="iconify icon" data-icon="iconoir:pokeball"></span>
+                            <span class="text">Pokedex</span>
+                        </a>
+                    </li>
+                    
+                    <li class="list">
+                        <a href="../html/region.html">
+                            <span class="iconify icon" data-icon="gis:poi-map-o"></span>
+                            <span class="text">Region</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="../html/build.html">
+                            <span class="iconify icon" data-icon="material-symbols:swords"></span>
+                            <span class="text">Build</span>
+                        </a>
+                    </li>
+                </ul>
                 
-                <li class="list">
-                    <a href="../html/region.html">
-                        <span class="iconify icon" data-icon="gis:poi-map-o"></span>
-                        <span class="text">Region</span>
-                    </a>
-                </li>
-                <li class="list">
-                    <a href="../html/build.html">
-                        <span class="iconify icon" data-icon="material-symbols:swords"></span>
-                        <span class="text">Build</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+            </nav>
+            <input type="text">
+        </header>
 
         <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
     </body>
