--- a/html/build.html
+++ b/html/build.html
@@ -17,17 +17,19 @@
                 <ul>
                     <li class="list">
                         <a href="../html/index.html">
-                            <span class="iconify icon" data-icon="iconoir:pokeball"></span>
+                            <span class="iconify icon"
+                                data-icon="ion:home-outline"></span>
                             <span class="text">inicio</span>
                         </a>
                     </li>
                     <li class="list">
                         <a href="../html/pokedex.html">
-                            <span class="iconify icon" data-icon="iconoir:pokeball"></span>
+                            <span class="iconify icon"
+                                data-icon="iconoir:pokeball"></span>
                             <span class="text">Pokedex</span>
                         </a>
                     </li>
-                    
+
                     <li class="list">
                         <a href="../html/region.html">
                             <span class="iconify icon" data-icon="gis:poi-map-o"></span>
@@ -36,14 +38,27 @@
                     </li>
                     <li class="list">
                         <a href="../html/build.html">
-                            <span class="iconify icon" data-icon="material-symbols:swords"></span>
+                            <span class="iconify icon"
+                                data-icon="material-symbols:swords"></span>
                             <span class="text">Build</span>
                         </a>
                     </li>
                 </ul>
-                
+
             </nav>
-            <input type="text">
+            <form>
+                <div class="form-group">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="icon-search">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M15.75 15.75l-2.489-2.489m0 0a3.375 3.375 0 10-4.773-4.773 3.375 3.375 0 004.774 4.774zM21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+                    <input type="search" placeholder="Buscar">
+
+                </div>
+                <button class="btn-search">Buscar</button>
+            </form>
         </header>
 
         <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
