--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
                     <li class="list">
                         <a href="../html/index.html">
                             <span class="iconify icon"
-                                data-icon="iconoir:pokeball"></span>
+                                data-icon="ion:home-outline"></span>
                             <span class="text">inicio</span>
                         </a>
                     </li>
