cards por tipo, falta css en tipos

--- a/html/pokedex.html
+++ b/html/pokedex.html
@@ -12,14 +12,14 @@
             <img class="logo" src="../img/pokemon logo.png" alt="logo pokemon">
             <nav class="navigation">
                 <ul>
-                    <li class="list">
+                    <li class="list" id="nav-inicio">
                         <a href="../html/index.html">
                             <span class="iconify icon"
                                 data-icon="ion:home-outline"></span>
                             <span class="text">inicio</span>
                         </a>
                     </li>
-                    <li class="list">
+                    <li class="list" id="nav-pokedex">
                         <a href="../html/pokedex.html">
                             <span class="iconify icon"
                                 data-icon="iconoir:pokeball"></span>
@@ -27,13 +27,13 @@
                         </a>
                     </li>
 
-                    <li class="list">
+                    <li class="list" id="nav-region">
                         <a href="../html/region.html">
                             <span class="iconify icon" data-icon="gis:poi-map-o"></span>
                             <span class="text">Region</span>
                         </a>
                     </li>
-                    <li class="list">
+                    <li class="list" id="nav-build">
                         <a href="../html/build.html">
                             <span class="iconify icon"
                                 data-icon="material-symbols:swords"></span>
