--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokemon</title>
         <link rel="stylesheet" href="../css/styles.css">
-        <link rel="stylesheet" href="../css/home.css">
+        <link rel="stylesheet" href="../css/inicio.css">
     </head>
 
     <body>
@@ -16,14 +16,14 @@
             <img class="logo" src="../img/pokemon logo.png" alt="logo pokemon">
             <nav class="navigation">
                 <ul>
-                    <li class="list">
+                    <li class="list" id="nav-inicio">
                         <a href="../html/index.html">
                             <span class="iconify icon"
                                 data-icon="ion:home-outline"></span>
                             <span class="text">inicio</span>
                         </a>
                     </li>
-                    <li class="list">
+                    <li class="list" id="nav-pokedex">
                         <a href="../html/pokedex.html">
                             <span class="iconify icon"
                                 data-icon="iconoir:pokeball"></span>
@@ -31,13 +31,13 @@
                         </a>
                     </li>
 
-                    <li class="list">
+                    <li class="list" id="nav-region">
                         <a href="../html/region.html">
                             <span class="iconify icon" data-icon="gis:poi-map-o"></span>
                             <span class="text">Region</span>
                         </a>
                     </li>
-                    <li class="list">
+                    <li class="list" id="nav-build">
                         <a href="../html/build.html">
                             <span class="iconify icon"
                                 data-icon="material-symbols:swords"></span>
