cambio de ruta index

--- a/html/region.html
+++ b/html/region.html
@@ -17,7 +17,7 @@
             <nav class="navigation">
                 <ul>
                     <li class="list" id="nav-inicio">
-                        <a href="../html/index.html">
+                        <a href="../index.html">
                             <span class="iconify icon"
                                 data-icon="ion:home-outline"></span>
                             <span class="text">inicio</span>
