--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <body>
 
         <header>
-            <img class="logo" src="../img/pokemon logo.png" alt="logo pokemon">
+            <img class="logo" src="img/pokemon logo.png" alt="logo pokemon">
             <nav class="navigation">
                 <ul>
                     <li class="list" id="nav-inicio">
-                        <a href="../html/index.html">
+                        <a href="index.html">
                             <span class="iconify icon"
                                 data-icon="ion:home-outline"></span>
                             <span class="text">inicio</span>
                         </a>
                     </li>
                     <li class="list" id="nav-pokedex">
-                        <a href="../html/pokedex.html">
+                        <a href="html/pokedex.html">
                             <span class="iconify icon"
                                 data-icon="iconoir:pokeball"></span>
                             <span class="text">Pokedex</span>
@@ -32,13 +32,13 @@
                     </li>
 
                     <li class="list" id="nav-region">
-                        <a href="../html/region.html">
+                        <a href="html/region.html">
                             <span class="iconify icon" data-icon="gis:poi-map-o"></span>
                             <span class="text">Region</span>
                         </a>
                     </li>
                     <li class="list" id="nav-build">
-                        <a href="../html/build.html">
+                        <a href="html/build.html">
                             <span class="iconify icon"
                                 data-icon="material-symbols:swords"></span>
                             <span class="text">Build</span>
@@ -80,12 +80,12 @@
 
                 </section>
                 <aside>
-                    <img src="../img/chansey-icon.png" alt="chansey icon">
+                    <img src="img/chansey-icon.png" alt="chansey icon">
                 </aside>
             </article>
             <article>
                 <aside>
-                    <img src="../img/bulbasaur.webp" alt="bulbasaur icon">
+                    <img src="img/bulbasaur.webp" alt="bulbasaur icon">
                 </aside>
                 <section>
                     <h2>Orígenes de Pokémon</h2>
@@ -119,12 +119,12 @@
 
                 </section>
                 <aside>
-                    <img src="../img/jigglypuff-icon.webp" alt="">
+                    <img src="img/jigglypuff-icon.webp" alt="">
                 </aside>
             </article>
 
             <article>
-                <aside> <img src="../img/charmander-icon.webp" alt=""></aside>
+                <aside> <img src="img/charmander-icon.webp" alt=""></aside>
                 <section>
                     <h2>Atrapar, Entrenar, Luchar</h2>
                     <p>
@@ -152,10 +152,10 @@
                     </p>
 
                 </section>
-                <aside> <img src="../img/eevee-icon.webp" alt=""></aside>
+                <aside> <img src="img/eevee-icon.webp" alt=""></aside>
             </article>
             <article>
-                <aside> <img src="../img/squirtle-icon.webp" alt=""></aside>
+                <aside> <img src="img/squirtle-icon.webp" alt=""></aside>
                 <section>
                     <h2>El Desafío de la Liga Pokémon</h2>
                     <p>
@@ -185,11 +185,11 @@
                     </p>
 
                 </section>
-                <aside> <img src="../img/sudowoodo-ic.png" alt=""></aside>
+                <aside> <img src="img/sudowoodo-ic.png" alt=""></aside>
             </article>
 
             <article>
-                <aside> <img src="../img/pikachu-icon.webp" alt=""></aside>
+                <aside> <img src="img/pikachu-icon.webp" alt=""></aside>
                 <section>
                     <h2>El Futuro de Pokémon
 
