cards arregladas, fix rutas index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="container-fluid">
         <nav class="navbar navbar-expand-md ">
             <a href="../index.html " class="navbar-brand">
-                <img class="logo" src="../img/pokemon logo.png" alt="logo pokemon">
+                <img class="logo" src="img/pokemon logo.png" alt="logo pokemon">
             </a>
 
             <button class="navbar-toggler btn-collapse" data-bs-toggle="collapse" data-bs-target="#opcionesNav" aria-controls="opcionesNav" aria-expanded="false">
@@ -26,21 +26,21 @@
             <!-- elementos -->
             <div class="collapse navbar-collapse " id="opcionesNav">
                 <div class="nav">
-                    <a id="nav-inicio" href="../index.html">
+                    <a id="nav-inicio" href="/index.html">
                         <span class="iconify icon "
                             data-icon="ion:home-outline"></span>
                         <span class="text">inicio</span>
                     </a>
-                    <a id="nav-pokedex" href="../html/pokedex.html">
+                    <a id="nav-pokedex" href="/html/pokedex.html">
                         <span class="iconify icon "
                             data-icon="iconoir:pokeball"></span>
                         <span class="text">Pokedex</span>
                     </a>
-                    <a id="nav-region" href="../html/region.html">
+                    <a id="nav-region" href="/html/region.html">
                         <span class="iconify icon " data-icon="gis:poi-map-o"></span>
                         <span class="text">Region</span>
                     </a>
-                    <a id="nav-build" href="../html/build.html">
+                    <a id="nav-build" href="/html/build.html">
                         <span class="iconify icon "
                             data-icon="material-symbols:swords"></span>
                         <span class="text">Build</span>
