--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                     
                 </div>
             </div>
+          
         </nav>
+
 
     </header>
 
@@ -73,6 +75,7 @@
 
 
         </article>
+        <img src="img/starter_index.png" alt="starters">
         <article>
 
             <section>
