--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
 
     </footer>
 
+    <!-- cambiar theme
+    <img id="theme" src="img/pokeball.png" alt=""> -->
+    <!-- iconify -->
     <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -228,7 +231,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-
+  
 </body>
 
 </html>
