--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 
 
         </article>
-        <img src="img/starter_index.png" alt="starters">
+        <div class="contenedorImagen">
+            <img class="imagenstarter" src="img/red_inicio.jpg" alt="starters">
+        </div>
         <article>
 
             <section>
