--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
     <!-- cambiar theme
     <img id="theme" src="img/pokeball.png" alt=""> -->
 
-
     <script src="js/scripts.js"></script>
+    <script src="js/inicio.js"></script>
     <!-- iconify -->
     <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
     <!-- bootstrap -->
