--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/inicio.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/inicio.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -37,7 +37,7 @@
 
         </article>
         <div class="contenedorImagen">
-            <img class="imagenstarter" src="img/red_inicio.jpg" alt="starters">
+            <img class="imagenstarter" src="../img/red_inicio.jpg" alt="starters">
         </div>
         <article>
 
@@ -179,17 +179,14 @@
 
         <h3>¡Prepárate para embarcarte en una emocionante aventura en el
             mundo de Pokémon!
-            </h2>
+        </h3>
 
     </div>
-    <footer>
 
-    </footer>
 
-  
 
-    <script src="js/scripts.js"></script>
-    <script src="js/inicio.js"></script>
+
+    <script src="../js/scripts.js"></script>
     <!-- iconify -->
     <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
     <!-- bootstrap -->
@@ -199,7 +196,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-  
+
 </body>
 
 </html>
