fix responsive, h1 in pokedex

--- a/html/pokedex.html
+++ b/html/pokedex.html
@@ -14,6 +14,7 @@
     
 
     <div class="seccion-pokedex">
+        <h1 id="tituloPokedex">Pokedex</h1>
         <div class="filtros-container">
 
         </div>
