busqueda, falta agregar post

--- a/archivos/html/pokedex.html
+++ b/archivos/html/pokedex.html
@@ -16,14 +16,19 @@
     <div class="seccion-pokedex">
         <h1 id="tituloPokedex">Pokedex</h1>
         <div class="filtros-container">
-
+            <div id="search">
+                <form action="" class="search-bar">
+                    <input type="text" name="" id="" placeholder="Buscar Pokemon">
+                    <button type="submit"><span class="iconify" data-icon="material-symbols:search"></span></button>
+                </form>
+            </div>
         </div>
 
         <div id="cards-container">
            
         </div>
 
-        <div id="sentinela"></div>
+        <div id="sentry"></div>
     </div>
 
     <script src="../js/scripts.js"></script>
