--- a/archivos/html/build.html
+++ b/archivos/html/build.html
@@ -44,7 +44,7 @@
 
         </div>
 
-        <script src="../js/searchPokemon.js"></script>
+        <script src="../js/buildTeam.js"></script>
         <script src="../js/scripts.js"></script>
         <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
         <!-- bootstrap -->
